exports[`no-assert-throws-call > invalid(1): import assert from 'node:assert';\nassert.throws(parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(1): import assert from 'node:assert';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(10): import assert from 'node:assert';\nassert.throws((parse(input))); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((parse(input)));

`;

exports[`no-assert-throws-call > invalid(10): import assert from 'node:assert';\nassert.throws((parse(input))); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((parse(input)));
    |                ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => parse(input)));

`;

exports[`no-assert-throws-call > invalid(11): import assert from 'node:assert';\nassert.throws(parse?.(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse?.(input));

`;

exports[`no-assert-throws-call > invalid(11): import assert from 'node:assert';\nassert.throws(parse?.(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse?.(input));
    |               ^^^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse?.(input));

`;

exports[`no-assert-throws-call > invalid(12): import assert from 'node:assert';\nassert.throws(parse(input) as never); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input) as never);

`;

exports[`no-assert-throws-call > invalid(12): import assert from 'node:assert';\nassert.throws(parse(input) as never); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input) as never);
    |               ^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input) as never);

`;

exports[`no-assert-throws-call > invalid(13): import assert from 'node:assert';\nassert.throws(parse(input)!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input)!);

`;

exports[`no-assert-throws-call > invalid(13): import assert from 'node:assert';\nassert.throws(parse(input)!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input)!);
    |               ^^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input)!);

`;

exports[`no-assert-throws-call > invalid(14): import assert from 'node:assert';\nassert.throws(parse(input) satisfies never); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parse(input) satisfies never);

`;

exports[`no-assert-throws-call > invalid(14): import assert from 'node:assert';\nassert.throws(parse(input) satisfies never); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parse(input) satisfies never);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input) satisfies never);

`;

exports[`no-assert-throws-call > invalid(2): import assert from 'node:assert';\nassert.throws(parser.parse(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(parser.parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(2): import assert from 'node:assert';\nassert.throws(parser.parse(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(parser.parse(input), SyntaxError);
    |               ^^^^^^^^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => parser.parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(3): import assert from 'node:assert/strict';\nassert.throws(parse(input)); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(3): import assert from 'node:assert/strict';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert/strict';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(4): import * as assert from 'node:assert';\nassert.throws(parse(input)); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(4): import * as assert from 'node:assert';\nassert.throws(parse(input)); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.throws(parse(input));
    |               ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import * as assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(5): import {throws} from 'node:assert';\nthrows(parse(input)); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(5): import {throws} from 'node:assert';\nthrows(parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(parse(input));
    |        ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws} from 'node:assert';
  2 | throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(6): import {throws as assertThrows} from 'node:assert';\nassertThrows(parse(input)); 1`] = `

  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(parse(input));

`;

exports[`no-assert-throws-call > invalid(6): import {throws as assertThrows} from 'node:assert';\nassertThrows(parse(input)); 2`] = `

Message:
  1 | import {throws as assertThrows} from 'node:assert';
> 2 | assertThrows(parse(input));
    |              ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(7): import {throws} from 'node:assert/strict';\nthrows(parse(input)); 1`] = `

  1 | import {throws} from 'node:assert/strict';
  2 | throws(parse(input));

`;

exports[`no-assert-throws-call > invalid(7): import {throws} from 'node:assert/strict';\nthrows(parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert/strict';
> 2 | throws(parse(input));
    |        ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import {throws} from 'node:assert/strict';
  2 | throws(() => parse(input));

`;

exports[`no-assert-throws-call > invalid(8): import test from 'node:test';\ntest('t', t => { t.assert.throws(parse(input)); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(parse(input)); });

`;

exports[`no-assert-throws-call > invalid(8): import test from 'node:test';\ntest('t', t => { t.assert.throws(parse(input)); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.throws(parse(input)); });
    |                                  ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(() => parse(input)); });

`;

exports[`no-assert-throws-call > invalid(9): import assert from 'node:assert';\nassert.throws(/* comment */ parse(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(/* comment */ parse(input), SyntaxError);

`;

exports[`no-assert-throws-call > invalid(9): import assert from 'node:assert';\nassert.throws(/* comment */ parse(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(/* comment */ parse(input), SyntaxError);
    |                             ^^^^^^^^^^^^ \`throws()\` expects a function callback. This call runs before the assertion can catch it.

Suggestion 1/1: Wrap the call in an arrow function.:
  1 | import assert from 'node:assert';
  2 | assert.throws(/* comment */ () => parse(input), SyntaxError);

`;
